# QRCryptX

./: .replit  README.md  app.py  pyproject.toml
